WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203869
Focusing a shadow host which delegates focus should skip inner shadow hosts which delegate focus
https://bugs.webkit.org/show_bug.cgi?id=203869
Summary
Focusing a shadow host which delegates focus should skip inner shadow hosts w...
Ryosuke Niwa
Reported
2019-11-05 16:15:24 PST
Per
https://github.com/whatwg/html/issues/5052
, correct our implementation.
Attachments
WIP
(6.00 KB, patch)
2019-11-05 16:17 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Fixes the bug
(8.14 KB, patch)
2019-11-15 19:23 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews210 for win-future
(15.41 MB, application/zip)
2019-11-15 21:19 PST
,
EWS Watchlist
no flags
Details
Fixed the tests
(8.65 KB, patch)
2019-11-15 23:47 PST
,
Ryosuke Niwa
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews211 for win-future
(14.16 MB, application/zip)
2019-11-16 02:24 PST
,
EWS Watchlist
no flags
Details
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2019-11-05 16:17:47 PST
Created
attachment 382859
[details]
WIP
Ryosuke Niwa
Comment 2
2019-11-05 16:17:59 PST
Waiting for
https://github.com/web-platform-tests/wpt/pull/20079
to be corrected & merged.
Ryosuke Niwa
Comment 3
2019-11-15 19:23:18 PST
Created
attachment 383682
[details]
Fixes the bug
EWS Watchlist
Comment 4
2019-11-15 21:19:50 PST
Comment on
attachment 383682
[details]
Fixes the bug
Attachment 383682
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13259922
New failing tests: fast/forms/fieldset/fieldset-disabled.html fast/forms/input-appearance-disabled.html fast/selectors/focus-within-style-update.html fast/selectors/focus-within-with-selector-checker.html fast/forms/input-no-renderer.html
EWS Watchlist
Comment 5
2019-11-15 21:19:52 PST
Created
attachment 383687
[details]
Archive of layout-test-results from ews210 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews210 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Ryosuke Niwa
Comment 6
2019-11-15 23:47:35 PST
Created
attachment 383693
[details]
Fixed the tests
EWS Watchlist
Comment 7
2019-11-16 02:24:41 PST
Comment on
attachment 383693
[details]
Fixed the tests
Attachment 383693
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/13260287
New failing tests: fast/repaint/backgroundSizeRepaint.html
EWS Watchlist
Comment 8
2019-11-16 02:24:43 PST
Created
attachment 383694
[details]
Archive of layout-test-results from ews211 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews211 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Ryosuke Niwa
Comment 9
2019-11-17 21:31:59 PST
(In reply to Build Bot from
comment #7
)
> Comment on
attachment 383693
[details]
> Fixed the tests > >
Attachment 383693
[details]
did not pass win-ews (win): > Output:
https://webkit-queues.webkit.org/results/13260287
> > New failing tests: > fast/repaint/backgroundSizeRepaint.html
Don't think this Windows test failure is related to this patch. Also, Mac debug WK1 failures are to do with page cache code, and they have been crashing on bots as well. Not sure why EWS thought it was caused by this patch.
WebKit Commit Bot
Comment 10
2019-11-17 22:27:16 PST
Comment on
attachment 383693
[details]
Fixed the tests Clearing flags on attachment: 383693 Committed
r252537
: <
https://trac.webkit.org/changeset/252537
>
WebKit Commit Bot
Comment 11
2019-11-17 22:27:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12
2019-11-17 22:28:26 PST
<
rdar://problem/57272509
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug