Focusing a shadow host which delegates focus should skip inner shadow hosts which delegate focus https://bugs.webkit.org/show_bug.cgi?id=203869

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Imported the latest test from https://github.com/web-platform-tests/wpt/pull/20079.

* web-platform-tests/shadow-dom/focus/focus-method-delegatesFocus-expected.txt:
* web-platform-tests/shadow-dom/focus/focus-method-delegatesFocus.html:

Source/WebCore:

Fixed the bug that WebKit doesn't skip a shadow host with delegatesFocus set when looking for
the first programatically focusable element.

Test: imported/w3c/web-platform-tests/shadow-dom/focus/focus-method-delegatesFocus.html

* dom/Element.cpp:
(WebCore::shadowRootWithDelegatesFocus): Added.
(WebCore::isProgramaticallyFocusable): Updated to return false on a shadow host with delegatesFocus.
(WebCore::Element::focus): Don't move the focus if the shadow host only contains a focused element
per https://github.com/w3c/webcomponents/issues/840.


Canonical link: https://commits.webkit.org/217572@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252537 268f45cc-cd09-0410-ab3c-d52691b4dbfc